Correção de Atualização de erro